# homelab

./: .gitignore  LICENSE  README.md  compose.yaml  shell.nix
apps/: Readme.md  compose.yaml  shell.nix
apps/higia/: .gitignore  README.md  Taskfile.yml  mix.exs
apps/higia/assets/css/: app.css
apps/higia/assets/js/: app.js
apps/higia/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
apps/higia/lib/: higia.ex  higia_web.ex
apps/higia/lib/higia/: application.ex  mailer.ex  repo.ex
apps/higia/lib/higia_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
apps/higia/lib/higia_web/components/: core_components.ex  layouts.ex
apps/higia/lib/higia_web/components/layouts/: root.html.heex
apps/higia/lib/higia_web/controllers/: error_html.ex  error_json.ex  healthcenter_controller.ex  healthcenter_html.ex  page_controller.ex  page_html.ex
apps/higia/lib/higia_web/controllers/healthcenter_html/: index.html.heex  show.html.heex
apps/higia/priv/repo/: seeds.exs
apps/higia/test/: test_helper.exs
apps/higia/test/higia_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
apps/higia/test/support/: conn_case.ex  data_case.ex
homelab-provider/: Readme.md  shell.nix
lab-stacks/: Pulumi.yaml  pyproject.toml  shell.nix
manulab-cli/: Cargo.toml  Readme.md  Taskfile.yml  build.rs  shell.nix
manulab-cli/src/: main.rs
manulab-provider/: Cargo.toml  Taskfile.yml  build.rs  provider.proto  shell.nix
manulab-provider/src/: main.rs
protos/: provider.proto  types.proto
wg-configs/: README.md
