[package]
name = "manulab-cli"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "manulab-cli-client"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
log = "0.4.29"
env_logger = "0.11.8"
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
