[package]
name = "manulab-provider"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "manulab-provider-server"
path = "src/main.rs"

[dependencies]
opentelemetry = "0.31.0"
opentelemetry-stdout = "0.31.0"
opentelemetry_sdk = "0.31.0"
prost = "0.14.1"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
